--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "myclabs/deep-copy": "^1.11"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.1 || ^11.1"
+        "phpunit/phpunit": "^10.1 || ^11.1 || ^12.0"
     },
     "autoload": {
         "psr-4": {
