--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,5 +34,5 @@ jobs:
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        slug: BoatraceVentureProject/Trimmer
+        slug: shimomo/bvp-trimmer
         files: build/coverage-xml/coverage.xml
